--- a/package.json
+++ b/package.json
@@ -1,12 +1,55 @@
 {
-  "name": "tpl-lib",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "description": "RBX npm Library",
+  "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/format": "^19.5.0",
+    "@commitlint/types": "^19.5.0",
+    "@eslint/js": "^9.17.0",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/npm": "10.0.6",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.10.3",
+    "@vitest/coverage-v8": "^2.0.5",
+    "commitizen": "^4.3.1",
+    "conventional-changelog-conventionalcommits": "5.0.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-package-json": "^0.19.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
+    "nano-staged": "^0.8.0",
+    "pkgroll": "^2.4.1",
+    "prettier": "^3.3.3",
+    "semantic-release": "20.1.0",
+    "simple-git-hooks": "^2.11.1",
+    "typescript": "^5.2.2",
+    "typescript-eslint": "^8.19.0",
+    "vitest": "^2.0.5"
+  },
+  "engines": {
+    "node": ">= 18.18.2",
+    "npm": ">= 8.11.0",
+    "pnpm": ">= 9.15.2"
+  },
+  "enginesStrict": true,
+  "keywords": [],
+  "license": "MIT",
+  "main": "index.js",
+  "name": "RBX_PROJECT_NAME",
+  "packageManager": "pnpm@9.15.2",
+  "scripts": {
+    "commitlint": "commitlint --edit",
+    "test:unit": "echo \"TODO\" && exit 0",
+    "prepare": "husky || true"
+  },
+  "type": "module",
+  "version": "1.0.0",
+  "volta": {
+    "node": "18.18.2"
+  }
 }
