--- a/package.json
+++ b/package.json
@@ -1,7 +1,43 @@
 {
-  "author": "RBX_AUTHOR",
+  "name": "RBX_PROJECT_NAME",
+  "version": "1.0.0",
+  "description": "RBX_DESCRIPTION",
+  "keywords": [
+    "front-end",
+    "RBX",
+    "typescript"
+  ],
+  "homepage": "RBX_HTTPS_REPOSITORY",
   "bugs": {
     "url": "RBX_HTTPS_REPOSITORY/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+RBX_HTTPS_REPOSITORY"
+  },
+  "license": "MIT",
+  "author": "RBX_AUTHOR",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "prebuild": "pnpm run type-check",
+    "build": "pkgroll",
+    "commit": "git-cz",
+    "commitlint": "commitlint --edit",
+    "eslint:fix": "eslint --fix",
+    "prepare": "husky || true",
+    "release": "semantic-release",
+    "start": "pkgroll --watch",
+    "test:unit": "vitest run",
+    "type-check": "tsc --noEmit"
   },
   "config": {
     "commitizen": {
@@ -9,7 +45,6 @@
     }
   },
   "dependencies": {},
-  "description": "RBX_DESCRIPTION",
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
@@ -17,12 +52,14 @@
     "@commitlint/format": "^19.5.0",
     "@commitlint/types": "^19.5.0",
     "@eslint/js": "^9.17.0",
+    "@eslint/json": "^0.10.0",
+    "@rodbe/prettier-config": "^1.3.1",
+    "@rodbe/tsconfig": "^1.0.1",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "10.0.6",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.10.3",
     "@vitest/coverage-v8": "^2.0.5",
     "commitizen": "^4.3.1",
@@ -35,56 +72,24 @@
     "nano-staged": "^0.8.0",
     "pkgroll": "^2.4.1",
     "prettier": "^3.3.3",
+    "prettier-plugin-curly": "^0.3.1",
+    "prettier-plugin-packagejson": "^2.5.8",
     "semantic-release": "20.1.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.19.0",
     "vitest": "^2.0.5"
   },
+  "packageManager": "pnpm@9.15.2",
   "engines": {
     "node": ">= 18.18.2",
     "npm": ">= 8.11.0",
     "pnpm": ">= 9.15.2"
   },
-  "enginesStrict": true,
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
+  "volta": {
+    "node": "18.18.2"
   },
-  "files": [
-    "dist"
-  ],
-  "homepage": "RBX_HTTPS_REPOSITORY",
-  "keywords": [
-    "front-end",
-    "RBX",
-    "typescript"
-  ],
-  "license": "MIT",
-  "name": "RBX_PROJECT_NAME",
-  "packageManager": "pnpm@9.15.2",
   "publishConfig": {
     "access": "public"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+RBX_HTTPS_REPOSITORY"
-  },
-  "scripts": {
-    "build": "pkgroll",
-    "commit": "git-cz",
-    "commitlint": "commitlint --edit",
-    "prebuild": "pnpm run type-check",
-    "prepare": "husky || true",
-    "release": "semantic-release",
-    "start": "pkgroll --watch",
-    "test:unit": "vitest run",
-    "type-check": "tsc --noEmit"
-  },
-  "type": "module",
-  "version": "1.0.0",
-  "volta": {
-    "node": "18.18.2"
-  }
+  "enginesStrict": true
 }
