--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "build": "pkgroll",
     "commit": "git-cz",
     "commitlint": "commitlint --edit",
+    "eslint:config": "eslint --print-config eslint.config.js",
     "eslint:fix": "eslint --fix",
     "prepare": "husky || true",
     "release": "semantic-release",
     "start": "pkgroll --watch",
     "test:unit": "vitest run",
-    "type-check": "tsc --noEmit"
+    "ts:check": "tsc --noEmit",
+    "ts:config": "tsc --showConfig"
   },
   "config": {
     "commitizen": {
@@ -45,38 +47,39 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@commitlint/cz-commitlint": "^19.6.1",
-    "@commitlint/format": "^19.5.0",
-    "@commitlint/types": "^19.5.0",
-    "@eslint/js": "^9.21.0",
-    "@eslint/json": "^0.10.0",
-    "@rodbe/prettier-config": "^1.3.1",
-    "@rodbe/tsconfig": "^1.0.1",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/cz-commitlint": "^19.8.1",
+    "@commitlint/format": "^19.8.1",
+    "@commitlint/types": "^19.8.1",
+    "@eslint/js": "^9.30.1",
+    "@eslint/json": "^0.12.0",
+    "@rodbe/prettier-config": "^1.4.0",
+    "@rodbe/tsconfig": "^1.1.1",
     "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/npm": "10.0.6",
-    "@semantic-release/release-notes-generator": "^10.0.3",
-    "@types/node": "^22.13.5",
-    "@vitest/coverage-v8": "^2.1.9",
+    "@semantic-release/github": "^11.0.3",
+    "@semantic-release/npm": "12.0.2",
+    "@semantic-release/release-notes-generator": "^14.0.3",
+    "@types/node": "^24.0.12",
+    "@vitest/coverage-v8": "^3.2.4",
     "commitizen": "^4.3.1",
-    "conventional-changelog-conventionalcommits": "5.0.0",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-package-json": "^0.26.0",
-    "eslint-plugin-prettier": "^5.2.3",
+    "conventional-changelog-conventionalcommits": "9.0.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-package-json": "^0.43.3",
+    "eslint-plugin-prettier": "^5.5.1",
     "husky": "^9.1.7",
     "nano-staged": "^0.8.0",
-    "pkgroll": "^2.11.0",
-    "prettier": "^3.5.2",
-    "prettier-plugin-curly": "^0.3.1",
-    "prettier-plugin-packagejson": "^2.5.8",
-    "semantic-release": "20.1.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1",
-    "vitest": "^3.0.6"
+    "pkgroll": "^2.14.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-curly": "^0.3.2",
+    "prettier-plugin-packagejson": "^2.5.18",
+    "semantic-release": "24.2.6",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.36.0",
+    "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@9.15.2",
   "engines": {
@@ -85,7 +88,7 @@
     "pnpm": ">= 9.15.2"
   },
   "volta": {
-    "node": "18.18.2"
+    "node": "23.10.0"
   },
   "publishConfig": {
     "access": "public"
