--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "tsBuildInfoFile": "./.cache/.tsbuildinfo"
   },
   "exclude": ["node_modules", "dist"],
   "extends": "@rodbe/tsconfig/bundler/no-dom/app",
